rhdlc/test/compile-fail/scope/use-no-name/top.rhdl
mod a {}

use a::b;
